// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Select" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 20px;
  width: 100%;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 16px;
  padding-right: 30px;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-3::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-3::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-3:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-3:disabled {
  color: #676b71;
}

.emotion-3:invalid,
.emotion-3 option:first-of-type {
  color: #c20013;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #dce0e3;
}

.emotion-3:focus,
.emotion-3:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-3>svg {
  fill: rgb(29, 30, 31);
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-4 {
  height: 0;
  visibility: hidden;
  margin: 3px 0 0;
  padding: 0;
  border-radius: 10px;
  border: 1px solid #0667c8;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  max-height: 240px;
  overflow-y: auto;
  z-index: 9;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-activedescendant=""
        aria-expanded={false}
        aria-haspopup="listbox"
        className="emotion-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        - Please select -
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
          />
        </svg>
      </button>
      <ul
        className="emotion-4"
        onKeyDown={[Function]}
        role="listbox"
        tabIndex={-1}
      />
    </div>
  </div>
</div>
`;

exports[`"Select" renders as disabled 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 20px;
  width: 100%;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: normal;
  font-size: 16px;
  padding-right: 30px;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-3::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-3::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-3:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-3:disabled {
  color: #676b71;
}

.emotion-3:invalid,
.emotion-3 option:first-of-type {
  color: #c20013;
}

.emotion-3>svg {
  fill: rgb(80, 82, 84);
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-4 {
  height: 0;
  visibility: hidden;
  margin: 3px 0 0;
  padding: 0;
  border-radius: 10px;
  border: 1px solid #0667c8;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  max-height: 240px;
  overflow-y: auto;
  z-index: 9;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-activedescendant=""
        aria-expanded={false}
        aria-haspopup="listbox"
        className="emotion-3"
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        - Please select -
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
          />
        </svg>
      </button>
      <ul
        className="emotion-4"
        onKeyDown={[Function]}
        role="listbox"
        tabIndex={-1}
      />
    </div>
  </div>
</div>
`;

exports[`"Select" renders as invalid 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  margin-bottom: 2px;
  width: 100%;
}

.emotion-1:focus-within label {
  color: #0667c8;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #dce0e3;
  caret-color: #0667c8;
  color: rgb(29, 30, 31);
  font-weight: 300;
  height: 48px;
  line-height: 24px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 16px;
  padding-right: 30px;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-3::-moz-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
  opacity: 1;
}

.emotion-3::-ms-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3::-webkit-input-placeholder {
  color: rgb(80, 82, 84);
  font-size: 16px;
  text-transform: none;
}

.emotion-3:focus {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-3:invalid:not(:focus) {
  box-shadow: 0 0 0 1px undefined;
}

.emotion-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-3:disabled {
  color: #676b71;
}

.emotion-3:invalid,
.emotion-3 option:first-of-type {
  color: #c20013;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #dce0e3;
}

.emotion-3:focus,
.emotion-3:active {
  box-shadow: 0 0 0 1px #0667c8;
}

.emotion-3>svg {
  fill: rgb(29, 30, 31);
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-4 {
  height: 0;
  visibility: hidden;
  margin: 3px 0 0;
  padding: 0;
  border-radius: 10px;
  border: 1px solid #0667c8;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  max-height: 240px;
  overflow-y: auto;
  z-index: 9;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-activedescendant=""
        aria-expanded={false}
        aria-haspopup="listbox"
        className="emotion-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        - Please select -
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
          />
        </svg>
      </button>
      <ul
        className="emotion-4"
        onKeyDown={[Function]}
        role="listbox"
        tabIndex={-1}
      />
    </div>
  </div>
</div>
`;
